fixed word wrapping

--- a/assets/css/general.css
+++ b/assets/css/general.css
@@ -56,11 +56,17 @@ body {
     display: inline;
 }
 
+.header.standard p {
+    inline-size: 50%;
+    overflow-wrap: break-word;
+}
+
 .header p {
     position: relative;
     display: inline-flex;
     left: 25%;
     right: 25%;
+    overflow-wrap: break-word;
 }
 
 .content.all {
@@ -125,6 +131,11 @@ a:visited{
         margin-left: 10%;
     }
 
+    .header.standard p {
+        inline-size: 80%;
+        overflow-wrap: break-word;
+    }
+
     .header p {
         position: relative;
         display: inline-flex;
@@ -144,6 +155,7 @@ a:visited{
 
     .header.home h1{
         font-size: 5.5vw;
+        font-weight: normal;
     }
 
     h3 {
